# Vietnamese-text-normalization

./: README  README.md  playground.ipynb  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
tests/: test_abbreviation_vi.py  test_acronym_vi.py  test_currency_vi.py  test_datestime_vi.py  test_intergration.py  test_letter_vi.py  test_measurement_vi.py  test_month_vi.py  test_number_vi.py  test_split_sentences.py
vi_cleaner/: abbreviation_vi.py  acronym_vi.py  currency_vi.py  datestime_vi.py  letter_vi.py  main.py  measurement_vi.py  numberical_vi.py  passage_utils.py  roman_number_vi.py  sentence_utils.py  symbol_vi.py  vi_cleaner.py
