[metadata]
name = vi_cleaner
version = 0.0.1
author = Trong Duong
author_email = trong.duong@codelink.io
description = Normalize Vietnamese text for text to speech
long_description = file: README
long_description_content_type = text/markdown
url = https://github.com/trong-codelink/vi_cleaner
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Natural Language :: Vietnamese
    Intended Audience :: Information Technology

[options]
packages = find:
python_requires = >=3.7
include_package_data = True